--- a/index.html
+++ b/index.html
@@ -7,166 +7,166 @@
     <div class="shrink-0 w-4 sm:w-48"></div>
   </div>
   <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-01.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-01.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-02.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-02.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-03.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-03.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-04.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-04.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-05.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-05.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-06.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-06.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-07.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-07.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-08.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-08.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-09.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-09.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-10.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-10.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-11.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-11.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-12.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-12.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-13.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-13.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-14.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-14.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-15.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-15.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-16.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-16.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-17.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-17.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-18.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-18.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-19.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-19.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-20.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-20.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-21.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-21.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-22.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-22.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-23.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-23.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-24.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-24.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-25.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-25.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-26.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-26.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-27.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-27.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-28.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-28.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-29.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-29.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-30.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-30.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-31.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-31.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-32.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-32.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-33.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-33.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-34.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-34.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-35.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-35.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-36.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-36.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-37.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-37.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-38.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-38.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-39.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-39.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-40.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-40.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-41.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-41.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-42.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-42.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-43.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-43.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-44.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-44.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-45.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-45.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-46.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-46.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-47.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-47.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-48.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-48.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-49.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-49.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-50.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-50.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-51.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-51.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-52.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-52.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-53.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-53.png">
 </div>
 <div class="snap-center shrink-0 first:pl-8 last:pr-8">
-    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] object-cover" src="assets/images/film-54.png">
+    <img class="shrink-0 aspect-[2.5/3.5] w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-54.png">
 </div>
 
 
