--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 
 
-<div class="scroller relative w-full flex gap-6 snap-x snap-mandatory overflow-x-auto pb-14">
+<div class="scroller relative w-full flex gap-6 snap-x snap-proximity overflow-x-auto pb-14">
   <div class="snap-center shrink-0">
     <div class="shrink-0 w-4 sm:w-48"></div>
   </div>
@@ -393,7 +393,11 @@
   </div>
 </div>
 
-<div class="bg-green-600">yo</div>
+<div class="bg-green-600 text-white p-4">
+    <div class="max-w-4proximityxl mx-auto flex items-center justify-between">
+        Another stupid thing made by <a target="_blank" class="font-semibold underline decoration-2 underline-offset-2" href="https://twitter.com/clarklab">@clarklab</a>
+    </div>
+</div>
 
 <script>
  document.addEventListener("DOMContentLoaded", function() {
