--- a/index.html
+++ b/index.html
@@ -430,12 +430,12 @@
 
 window.addEventListener('deviceorientation', function(event) {
     const cards = document.querySelectorAll('.card');
-    const maxDegree = 20; // Exaggerate tilt for testing
-    let tiltX = (event.beta / 90) * maxDegree;  // between -20 and 20
-    let tiltY = (event.gamma / 90) * maxDegree;  // between -20 and 20
+    const maxDegree = 40; // Increased tilt for testing
+    let tiltX = (event.beta / 90) * maxDegree;  // between -40 and 40
+    let tiltY = (event.gamma / 90) * maxDegree;  // between -40 and 40
 
     cards.forEach(card => {
-        card.style.transform = `rotateX(${tiltX}deg) rotateY(${tiltY}deg)`;
+        card.style.transform = `rotateY(${tiltY}deg) rotateX(${tiltX}deg)`;  // Swapped order
         card.style.transformOrigin = 'center';
     });
 });
