--- a/index.html
+++ b/index.html
@@ -168,10 +168,24 @@
 <div class="card snap-center shrink-0 first:pl-8 last:pr-8">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-54.png">
 </div>
-
-
-
-
+<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+    <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-55.png">
+</div>
+<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+    <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-56.png">
+</div>
+<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+    <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-57.png">
+</div>
+<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+    <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-58.png">
+</div>
+<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+    <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-59.png">
+</div>
+<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+    <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-60.png">
+</div>
 
   <div class="snap-center shrink-0">
     <div class="shrink-0 w-4 sm:w-48"></div>
@@ -426,6 +440,8 @@
       });
     });
 
+
+
 });
 
 window.addEventListener('deviceorientation', function(event) {
@@ -439,6 +455,7 @@ window.addEventListener('deviceorientation', function(event) {
         card.style.transformOrigin = 'center';
     });
 });
+
 
 
 
