--- a/_imports/head.html
+++ b/_imports/head.html
@@ -11,8 +11,32 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="dist/css/style.css" />
   <sergey-slot>
-    <title>Christmas Cards</title>
+    <title>Christmas Cards.wtf</title>
   </sergey-slot>
+
+
+  <!-- HTML Meta Tags -->
+  <title>Christmas Cards</title>
+  <meta name="description" content="A collection of Christmas Cards. Can't you read?">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://christmascards.wtf">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Christmas Cards">
+  <meta property="og:description" content="A collection of Christmas Cards. Can't you read?">
+  <meta property="og:image" content="https://christmascards.wtf/unfurl.png">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="christmascards.wtf">
+  <meta property="twitter:url" content="https://christmascards.wtf">
+  <meta name="twitter:title" content="Christmas Cards">
+  <meta name="twitter:description" content="A collection of Christmas Cards. Can't you read?">
+  <meta name="twitter:image" content="https://christmascards.wtf/unfurl.png">
+
+  <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+        
+
 </head>
 
 <body class="bg-gray-200 pt-20">
