--- a/_imports/head.html
+++ b/_imports/head.html
@@ -17,22 +17,22 @@
 
   <!-- HTML Meta Tags -->
   <title>Christmas Cards</title>
-  <meta name="description" content="A collection of Christmas Cards. Can't you read?">
+  <meta name="description" content="Your classic Christmas movies. On cards. Christmas Cards. Get it?">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://christmascards.wtf">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Christmas Cards">
-  <meta property="og:description" content="A collection of Christmas Cards. Can't you read?">
-  <meta property="og:image" content="https://christmascards.wtf/unfurl.png">
+  <meta property="og:description" content="Your classic Christmas movies. On cards. Christmas Cards. Get it?">
+  <meta property="og:image" content="https://christmascards.wtf/unfurl.jpg">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta property="twitter:domain" content="christmascards.wtf">
   <meta property="twitter:url" content="https://christmascards.wtf">
   <meta name="twitter:title" content="Christmas Cards">
-  <meta name="twitter:description" content="A collection of Christmas Cards. Can't you read?">
-  <meta name="twitter:image" content="https://christmascards.wtf/unfurl.png">
+  <meta name="twitter:description" content="Your classic Christmas movies. On cards. Christmas Cards. Get it?">
+  <meta name="twitter:image" content="https://christmascards.wtf/unfurl.jpg">
 
   <!-- Meta Tags Generated via https://www.opengraph.xyz -->
         
